# soloton

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PRODUCT.md  README.md  design.md  render.yaml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py  models.py  official_links.py  service.py  spots.py
backend/app/briefing/: __init__.py  demo.py  generate.py  guard.py  prompt.py  template.py
backend/app/clients/: __init__.py  base.py  khoa.py  kma.py  openmeteo.py  resolver.py
backend/app/engine/: __init__.py  __main__.py  forecast.py  risk.py  thresholds.py
backend/app/ingest/: __init__.py  advisory_history.py  cache.py  collect.py  normalize.py
backend/app/routers/: __init__.py  briefing.py  guard.py  observations.py  plans.py  risk.py  spots.py
backend/data/: advisory_history.json  advisory_replay_cases.json  gold_cases.json  snapshot.json
backend/tests/: conftest.py  helpers.py  test_advisory_absent.py  test_advisory_history.py  test_advisory_replay.py  test_api.py  test_batch_request_sharing.py  test_confession.py  test_engine.py  test_forecast.py  test_gold.py  test_guard_demo.py  test_hybrid_provider.py  test_ingest.py  test_llm_region_numberfree.py  test_missing_grade.py  test_openmeteo.py  test_plan_api.py  test_plan_briefing.py  test_prebake.py  test_provider_resolve.py  test_public_api_clients.py  test_slot_binding.py  test_source_attribution.py
docs/: ARCHITECTURE.md  DATA_SOURCES.md  DISCLAIMER.md  RISK_THRESHOLDS.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.tsbuildinfo  (+1 more)
(+25 files in other folders)
